ensure person text doesn't overflow

--- a/src/components/person.css
+++ b/src/components/person.css
@@ -4,6 +4,10 @@
   align-items: flex-start
 }
 
+.person__textContent {
+  overflow: hidden;
+}
+
 .person__photo {
   width: 35%;
   max-width: 250px;
